--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="foto">
                 <p>Meu nome é Lucas Macena e minha meta é trabalhar como engenheiro de software. Diariamente, dedico-me ao estudo para alcançar esse objetivo. Atualmente, estou focado em aprender Java e seus frameworks, como o Spring Boot.
                 </p>
-                <img src="img/img01.jpeg" alt="foto-lucas" title="foto-lucas">
+                <img src="img01.jpeg" alt="foto-lucas" title="foto-lucas">
                 <p class="meunome">Lucas Macena</p>
             </div>
             <div class="fotok">
